--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,21 +1,42 @@
 {% extends "base.html" %}
 
+{% load django_bootstrap5 %}
+
 {% block content %}
-  <form>
-      {{ form.as_p }}
-    <input type="submit" value="Submit">
-  </form>
-  {% with data=request.GET %}
+  {% with data=form.instance %}
+    {% if '/edit/' in request.path %}
+    <h1>Редактировать запись {{ data.pk }}</h1>
+    {% elif "/delete/" in request.path %}
+      <h1>Удалить запись {{ data.pk }}</h1>
+    {% else %}
+    <h1>Создать запись</h1>
+    {% endif %}
+    <div class="card col-4">
+      <div class="card-header">
+        Калькулятор ожидания дня рождения
+      </div>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}
+          {% if not "/delete/" in request.path %}
+            {% bootstrap_form form %}
+            {% bootstrap_button button_type="submit" content="Отправить" %}
+          {% else %}
+            <p>{{ data.first_name }} {{ data.last_name }}</p>
+            <p>{{ data.birthday }}</p>
+            {% bootstrap_button button_type="submit" content="Удалить" %}
+          {% endif %}
+        </form>
+      </div>
+    </div>
     {% if form.is_valid %}
-      <h2>Привет, {{ request.GET.first_name }} {{ request.GET.last_name }}</h2>
-            <!-- Если до дня рождения 0 дней... -->
+      ID новой записи в БД: {{ data.id }}
+      <hr> 
+      <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
       {% if birthday_countdown == 0 %}
-      <!-- ...выводим поздравление: -->
-        С днём рождения!
-      <!-- Если до дня рождения не ноль дней... -->
+        <p>С днём рождения!</p>
       {% else %}
-      <!-- ...сообщаем, сколько осталось ждать: -->
-        Осталось дней до дня рождения: {{ birthday_countdown }}!
+        <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
       {% endif %}
     {% endif %}
   {% endwith %}
